Fix image not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ footer {
     #contentCat {
         background: url(/images/cb1.jpg) no-repeat;
         height: 500px;
+        width:100%;
         background-size: cover;
         background-position-x: -400px;
     }
